p2/confs/app1.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: battleship-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: battleship
  template:
    metadata:
      labels:
        app: battleship
    spec:
      containers:
      - name: battleship
        image: magicalyak/docker-games:battleship
        ports:
        - containerPort: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: battleship-service
spec:
  selector:
    app: battleship
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
